# cayu

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  model-catalog-refresh.yml
benchmarks/one_shot/: README.md  case-requirements.json  prompt-tool-alignment.example.json  prompt-tool-alignment.schema.json  protocol.md  rubric.md  trial-report.schema.json
dashboard/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/scripts/: finalize-third-party-licenses.mjs
dashboard/src/: Layout.tsx  index.css  main.tsx
dashboard/tests/: aggregate-query.test.mjs  bedrock-billing.test.mjs  billing-breakdown.test.mjs  format.test.mjs  mutation-browser.test.mjs  mutation-transport.test.mjs  query-lifecycle.test.mjs  session-editing.test.mjs  session-history.test.mjs  session-index-error.test.mjs  session-index.test.mjs  third-party-licenses.test.ts  usage-rollup-scope.test.mjs  usage-rollup.test.mjs
docs/: advanced-runtime-examples.md  anthropic-haiku-cost-savings-results.md  anthropic-prompt-cache-compactor-ab-results.md  architecture.md  aws-bedrock-lambda-microvm-implementation-plan.md  aws-credentials.md  aws-lambda-microvm-metadata-isolation-research.md  build-a-runner.md  console.md  cost-optimization.md  environment-factories.md  evals.md  git-command-policy.md  glossary.md  model-catalog.md  nightly-verification.md  openai-subscription.md  project-layout.md  release-notes.md  releasing.md  repo-plan.md  runtime-contracts.md  server-configuration.md  session-inspection.md  session-store-targets.md  triggering-runs.md  virtual-egress.md
docs/adr/: 0001-database-storage-and-migrations.md
docs/evidence/: anthropic-haiku-4-5-pricing-2026-07-13.json  anthropic-haiku-cost-savings-2026-07-13.json
docs/recipes/: business-approvals.md  github-cli-virtual-egress.md  pr-reviewer.md  server-auth-tenancy.md
examples/: ADVANCED_RUNTIME_EXAMPLES.md  README.md  _live_checks.py  _runner_conformance.py  _workspace_conformance.py  anthropic_local_tools.py  artifact_file_live.py  artifact_workspace_bridge.py  bedrock_provider_live.py  business_approval_tiers.py  chat_completions_contract_live.py  chat_completions_local_tools.py  context_counting_live.py  context_pressure_calibration_live.py  credential_proxy_tool.py  custom_runner_tool.py  dashboard_behavior_live.py  dashboard_knowledge_review.py  dashboard_pending_actions.py  dispatch_worker.py  docker_interrupt_live.py  docker_sync_binding_live.py  e2b_hardened_coding_agent_live.py  e2b_runner_live.py  e2b_sync_binding_live.py  e2b_workspace_live.py  echo_tool_runtime.py  fastapi_stripe_virtual_egress.py  github_cli_virtual_egress.py  knowledge_embedding_live.py  knowledge_recall_live.py  knowledge_recall_many_live.py  knowledge_remember_local.py  lambda_microvm_runner_live.py  local_environment_runtime.py  microsandbox_guest_agent_liveness_live.py  microsandbox_network_default_live.py  microsandbox_runner_live.py  microsandbox_runtime_live.py  microsandbox_sync_binding_live.py  (+20 more)
examples/_advanced_support/: __init__.py  cli.py  costs.py  fake_github.py  results.py  runtime.py
examples/aws/: __init__.py  bedrock_provider_live.py  durable_services_live.py  lambda_microvm_runner_live.py
examples/cache_aware_research_council/: README.md  __init__.py  app.py  deterministic.py  live.py  scenario.py
examples/counterfactual_approval/: README.md  __init__.py  app.py  deterministic.py  live.py  scenario.py
examples/environments/: local_native.py  per_agent_environment.py  snapshot_restore.py
examples/github_pr_reviewer/: README.md  demo.py  github_tools.py  pr_reviewer.py  qa_policy.py  reviewer_app.py  webhook.py  worker.py  workspace.py
examples/lambda_microvm_sidecar/: Dockerfile  README.md  app.py
examples/prompt_cache_compaction/: README.md  __init__.py  app.py  deterministic.py  live.py  scenario.py
examples/repo_maintainer_tournament/: README.md  __init__.py  app.py  candidate_gates.py  deterministic.py  live.py  real_repository.py  scenario.py
examples/tainted_incident_response/: README.md  __init__.py  app.py  deterministic.py  live.py  scenario.py
maintenance/: __init__.py
maintenance/model_catalog/: __init__.py  agent_tools.py  browser.py  browser_verifier.py  check.py  decide.py  diff.py  guidance.py  policy.py  refresh.py  search.py  security.py  verified.py  verify.py
research/: secret-injection-report.html
scripts/: check_release_artifacts.py  console_pty_verification.py  generate_dashboard_api_types.py  generate_sidecar_manifest.py  nightly_verification.py  score_one_shot_benchmark.py
src/cayu/: __init__.py  __main__.py  _task_wait.py  _validation.py  _version.py  capabilities.py  credentials.py  embeddings.py  entrypoint.py  testing.py
tests/: egress_conformance.py  egress_e2e_support.py  test_documentation_contracts.py  test_documentation_discovery.py  test_public_api_surface.py  test_webhooks.py
tests/advanced_examples/: test_cost_evidence.py  test_counterfactual_approval.py  test_live_providers.py  test_prompt_cache_compaction.py  test_real_repository_boundary.py  test_repo_maintainer_tournament.py  test_research_council.py  test_tainted_incident_response.py
tests/artifacts/: test_aws_s3.py  test_images.py  test_workspace_bridge.py
tests/cli/: test_auth.py  test_check.py  test_console.py  test_evals_cli.py  test_generate.py  test_guide.py  test_inspect.py  test_lambda_microvm.py  test_nightly_verification.py  test_scaffold.py  test_session_cli.py  test_session_cli_postgres.py  test_stable_entrypoint.py  test_store_targets.py
tests/core/: _budget_ledger_contract.py  conftest.py  pending_action_conformance.py  postgres_contention_support.py  test_aggregate_contracts.py  test_anthropic_provider.py  test_app_characterization.py  test_app_manifest.py  test_app_registry.py  test_approval_from_event.py  test_bedrock_provider.py  test_billing.py  test_builtin_tools.py  test_cli.py  (+90 more)
(+620 files in other folders)
