[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cayu"
version = "0.1.0"
description = "A Python framework for long-running agents, multi-agent workflows, and sandboxed tool runtimes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Cayu" }
]
dependencies = [
  "certifi>=2024.0",
  "httpx>=0.27",
  "jsonschema>=4.23",
  "pydantic>=2.8",
  "tzdata>=2024.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.115",
  "httpx2>=2.3,<3",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "pillow>=10",
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
  "pypdf>=4",
  "pytest>=8.0",
  "ruff>=0.11",
  "sse-starlette>=2.0",
  "testcontainers[postgres]>=4.0",
  "ty>=0.0.1a8",
  "uvicorn>=0.30",
]
postgres = [
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
]
files = [
  "pillow>=10",
  "pypdf>=4",
]
e2b = [
  "e2b>=2.28,<3",
]
microsandbox = [
  "microsandbox>=0.5.5,<0.6",
]
otel = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
]
server = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]
all = [
  "e2b>=2.28,<3",
  "fastapi>=0.115",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "pillow>=10",
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
  "pypdf>=4",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]

[project.scripts]
cayu = "cayu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests", "examples"]
line-length = 100

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "TCH",   # flake8-type-checking
  "RUF",   # ruff-specific
]
ignore = [
  "E501",   # line length (handled by formatter)
  "TC001",  # move app import into TYPE_CHECKING (breaks pydantic)
  "TC003",  # move stdlib import into TYPE_CHECKING (breaks pydantic)
  "RUF012", # mutable class attrs (intentional in test fixtures)
  "RUF043", # regex metachar in pytest match= (intentional)
  "B017",   # blind Exception in tests (testing frozen attrs)
]

[tool.ruff.lint.isort]
known-first-party = ["cayu"]

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cayu"]
artifacts = ["src/cayu/server/dashboard/**"]
