[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cayu"
version = "0.1.0"
description = "A Python framework for long-running agents, multi-agent workflows, and sandboxed tool runtimes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cayu Technologies, Inc." }
]
dependencies = [
  "certifi>=2024.0",
  "httpx>=0.27",
  "jsonschema>=4.23",
  "pydantic>=2.8",
  "tzdata>=2024.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "cryptography>=42",
  "fastapi>=0.115",
  "httpx2>=2.3,<3",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "pillow>=10",
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
  "pypdf>=4",
  "pytest>=8.0",
  "ruff>=0.11",
  "sse-starlette>=2.0",
  "testcontainers[postgres]>=4.0",
  "ty>=0.0.1a8",
  "uvicorn>=0.30",
]
console = [
  "ipython>=9,<10",
]
browser = [
  "playwright>=1.61",
]
aws = [
  # Botocore's browser-based `aws login` credential provider requires CRT.
  "boto3[crt]>=1.43.44,<2",
]
postgres = [
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
]
files = [
  "pillow>=10",
  "pypdf>=4",
]
e2b = [
  "e2b>=2.28,<3",
]
egress = [
  "cryptography>=42",
]
microsandbox = [
  "microsandbox>=0.5.5,<0.6",
]
otel = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
]
vertex = [
  "google-auth[requests]>=2,<3",
]
server = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]
all = [
  "boto3>=1.43.44,<2",
  "cryptography>=42",
  "e2b>=2.28,<3",
  "fastapi>=0.115",
  "google-auth[requests]>=2,<3",
  "ipython>=9,<10",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "pillow>=10",
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
  "pypdf>=4",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]

[dependency-groups]
nightly = [
  "pexpect>=4.9; sys_platform != 'win32' and sys_platform != 'emscripten'",
]

[project.scripts]
cayu = "cayu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "postgres_recovery: real process-death coverage requiring the Postgres lane",
  "sigkill_recovery: real process-death recovery coverage run in its own lane",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests", "examples"]
line-length = 100

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "TCH",   # flake8-type-checking
  "RUF",   # ruff-specific
]
ignore = [
  "E501",   # line length (handled by formatter)
  "TC001",  # move app import into TYPE_CHECKING (breaks pydantic)
  "TC003",  # move stdlib import into TYPE_CHECKING (breaks pydantic)
  "RUF012", # mutable class attrs (intentional in test fixtures)
  "RUF043", # regex metachar in pytest match= (intentional)
  "B017",   # blind Exception in tests (testing frozen attrs)
]

[tool.ruff.lint.isort]
known-first-party = ["cayu"]

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cayu"]
artifacts = ["src/cayu/server/dashboard/**"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/cayu",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/pyproject.toml",
]
