[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cayu"
version = "0.1.0rc1"
description = "A Python runtime for production AI agents with durable sessions, controlled tool execution, context management, reviewed knowledge, recovery, evals, and replay."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cayu Technologies, Inc." }
]
dependencies = [
  "certifi>=2024.0",
  "httpx>=0.27",
  "jsonschema>=4.23",
  "pydantic>=2.12",
  "tzdata>=2024.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
  "cryptography>=42",
  "fastapi>=0.115",
  "httpx2>=2.3,<3",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "pillow>=10",
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
  "pypdf>=4",
  "pytest>=8.0",
  "pytest-cov>=7.1",
  "pydantic-settings>=2.7,<3",
  "ruff>=0.11",
  "sse-starlette>=2.0",
  "testcontainers[postgres]>=4.0",
  "ty>=0.0.1a8",
  "uvicorn>=0.30",
]
console = [
  "ipython>=9,<10",
]
browser = [
  "playwright>=1.61",
]
aws = [
  # Botocore's browser-based `aws login` credential provider requires CRT.
  "boto3[crt]>=1.43.44,<2",
]
postgres = [
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
]
files = [
  "pillow>=10",
  "pypdf>=4",
]
e2b = [
  "e2b>=2.28,<3",
]
egress = [
  "cryptography>=42",
]
microsandbox = [
  # Prerelease policy: accept only the exact SDK/runtime baseline Cayu verifies.
  # Upstream patch fixes require a Cayu bump and a fresh live-verification pass.
  "microsandbox==0.6.6",
]
otel = [
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
]
vertex = [
  "google-auth[requests]>=2,<3",
]
server = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]
server-settings = [
  "fastapi>=0.115",
  "pydantic-settings>=2.7,<3",
  "sse-starlette>=2.0",
  "uvicorn>=0.30",
]
all = [
  "boto3>=1.43.44,<2",
  "cryptography>=42",
  "e2b>=2.28,<3",
  "fastapi>=0.115",
  "google-auth[requests]>=2,<3",
  "ipython>=9,<10",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
  "pillow>=10",
  "psycopg[binary]>=3.2",
  "psycopg_pool>=3.2",
  "pypdf>=4",
  "pydantic-settings>=2.7,<3",
  "uvicorn>=0.30",
  "sse-starlette>=2.0",
]

[project.urls]
Homepage = "https://cayu.dev"
Repository = "https://github.com/cayu-dev/cayu"
Documentation = "https://github.com/cayu-dev/cayu#readme"
Issues = "https://github.com/cayu-dev/cayu/issues"
Changelog = "https://github.com/cayu-dev/cayu/blob/main/docs/release-notes.md"

[dependency-groups]
nightly = [
  "packaging>=24",
  "pexpect>=4.9; sys_platform != 'win32' and sys_platform != 'emscripten'",
]

[project.scripts]
cayu = "cayu.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "postgres_recovery: real process-death coverage requiring the Postgres lane",
  "sigkill_recovery: real process-death recovery coverage run in its own lane",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests", "examples"]
line-length = 100

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "TCH",   # flake8-type-checking
  "RUF",   # ruff-specific
]
ignore = [
  "E501",   # line length (handled by formatter)
  "TC001",  # move app import into TYPE_CHECKING (breaks pydantic)
  "TC003",  # move stdlib import into TYPE_CHECKING (breaks pydantic)
  "RUF012", # mutable class attrs (intentional in test fixtures)
  "RUF043", # regex metachar in pytest match= (intentional)
  "B017",   # blind Exception in tests (testing frozen attrs)
]

[tool.ruff.lint.isort]
known-first-party = ["cayu", "maintenance"]

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cayu"]
artifacts = [
  "src/cayu/data/**",
  "src/cayu/server/dashboard/**",
]

[tool.hatch.build.targets.wheel.force-include]
"examples/aws/lambda_microvm_sidecar" = "cayu/data/lambda_microvm_sidecar"

[tool.hatch.build.targets.sdist]
include = [
  "/examples/aws/lambda_microvm_sidecar",
  "/src/cayu",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/pyproject.toml",
]
